# advent-of-code

./: .envrc  .gitignore  Cargo.toml  aoc.nu  codebook.toml  flake.nix  rustfmt.toml
2015/01/: script.nu  tests.nuon
2015/02/: tests.nuon
2015/03/: script.nu  tests.nuon
2015/04/: script.nu
2015/05/: script.nu
2015/06/: Cargo.toml
2015/07/: Cargo.toml
2015/07/src/: main.rs
2015/08/: script.nu  tests.nuon
2015/09/: Cargo.toml
2015/09/src/: main.rs
2015/10/: Cargo.toml  tests.nuon
2015/10/src/: main.rs
2015/11/: Cargo.toml  tests.nuon
2015/11/src/: main.rs
2015/12/: script.nu  tests.nuon
2015/13/: Cargo.toml  tests.nuon
2015/13/src/: main.rs
2015/14/: script.nu  tests.nuon
2015/15/: Cargo.toml  tests.nuon
2015/15/src/: main.rs
2015/16/: script.nu
2015/17/: Cargo.toml
2015/17/src/: main.rs
2015/18/: Cargo.toml
2015/18/src/: main.rs
2015/19/: script.nu  tests.nuon
2015/2/: script.nu
2015/4/: tests.nuon
2015/5/: tests.nuon
2015/6/: Cargo.toml  tests.nuon
2015/6/src/: main.rs
2015/7/: Cargo.toml  tests.nuon
2015/9/: tests.nuon
2025/01/: tests.nuon
2025/02/: tests.nuon
2025/03/: script.nu
2025/04/: Cargo.toml
2025/05/: script.nu
2025/06/: script.nu  tests.nuon
2025/07/: script.nu
2025/08/: Cargo.toml  tests.nuon
2025/09/: Cargo.toml  tests.nuon
2025/1/: script.nu
2025/10/: Cargo.toml  tests.nuon
2025/11/: script.nu  tests.nuon
2025/2/: script.nu
2025/3/: tests.nuon
2025/4/: tests.nuon
2025/5/: tests.nuon
2025/7/: tests.nuon
rust/: Cargo.toml
rust/src/: lib.rs
(+9 files in other folders)
