[workspace]
members = ["2015/06", "2015/07", "2015/09", "2015/10", "2015/11", "2015/13", "2015/15", "2015/17", "2025/04", "2025/08", "2025/09", "2025/10"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
advent-of-code = { version = "1.0.0", path = "" }
serde = "1.0.228"
serde_json = "1.0.150"

[package]
name = "advent-of-code"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
